@@ -3,6 +3,8 @@
 	* info/session.c (info_select_reference): When following a reference
 	in a footnotes window, try to switch to a window containing a node
 	from the file.
+	* info/display.c (display_update_window_1): Turn off standout mode
+	if we are still in it by the time we get to the bottom of the window.
 
 2014-09-16  Gavin Smith  <gavinsmith0123@gmail.com>
 
